[package]
name = "monad-eth-block-validator"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-chain-config = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-block-policy = { workspace = true }
monad-eth-types = { workspace = true }
monad-secp = { workspace = true }
monad-state-backend = { workspace = true }
monad-system-calls = { workspace = true }
monad-tfm = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-eth-testutil = { workspace = true }
monad-testutil = { workspace = true }
monad-types = { workspace = true }

alloy-eips = { workspace = true }
itertools = { workspace = true }
proptest = { workspace = true }
