[package]
name = "monad-system-calls"
version = "0.1.0"
edition = "2024"

[dependencies]
monad-chain-config = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-types = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-eth-testutil = { workspace = true }
monad-testutil = { workspace = true }
monad-types = { workspace = true }

alloy-eips = { workspace = true }